adicionei um parágrafo

--- a/renovacao-namoro/index.html
+++ b/renovacao-namoro/index.html
@@ -9,5 +9,6 @@
     <h1>GATINHA</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam blanditiis accusamus, suscipit odio vero quae vel voluptates odit pariatur dolorum labore eum aspernatur. Harum, tempora nisi! Ab aspernatur id voluptatem.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat sit reiciendis dolorum aspernatur quo ipsa omnis et. Quibusdam ut vel at, laboriosam, molestiae praesentium doloribus porro dolorem deleniti quos voluptates!</p>
 </body>
 </html>
