--- a/renovacao-namoro/index.html
+++ b/renovacao-namoro/index.html
@@ -11,13 +11,13 @@
         <!-- Formulário de Login -->
         <div id="secaoLogin">
             <h1>Cadastro</h1>
-            <h2>Para o coração do seu amado</h2>
+            <h2>Para o coração do seu (?)</h2>
             <form id="loginForm">
-                <label for="username">Nome:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Senha:</label>
-                <input type="password" id="password" name="password" required>
-                <button type="button" onclick="mostrarMensagemRenovação()">Acessar</button>
+                <label for="usuario">Seu Nome Completo:</label>
+                <input type="text" id="usuario" name="usuario" required>
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha" required>
+                <button type="button" onclick="login()">Acessar</button>
             </form>
         </div>
 
@@ -26,7 +26,7 @@
             <h2>Você aceita fazer uma renovação do nosso namoro?</h2>
             <div id="buttons">
                 <button id="yesButton" onclick="mostrarContrato()">Sim</button>
-                <button id="noButton" onmouseover="moverBotao()" onmouseleave="pararMovimento()">Não</button>
+                <button id="noButton" onmouseover="moverBotao()" onmouseleave="moverBotao()">Não</button>
             </div>
         </div>
 
@@ -36,6 +36,13 @@
             <p><strong>Nome:</strong> <span id="nomeContrato"></span></p>
             <p><strong>Nome do Namorado:</strong> <span id="contratoParceiro"></span></p>
             <p>Este contrato é um compromisso de renovação do namoro, firmado entre as partes acima mencionadas. Após 6 meses o contrato foi renovado</p>
+        </div>
+
+        <!-- Tela de Erro -->
+        <div id="secaoError" class="hidden">
+            <img src="foto-error" alt="Erro" id="errorImage">
+            <h2>ERROUUUU!!! te dou outra chance</h2>
+            <button id="voltaBotao" onclick="voltaLogin()">Tentar Novamente</button>
         </div>
     </div>
 
