--- a/renovacao-namoro/index.html
+++ b/renovacao-namoro/index.html
@@ -26,7 +26,7 @@
             <h2>Você aceita fazer uma renovação do nosso namoro?</h2>
             <div id="buttons">
                 <button id="yesButton" onclick="mostrarContrato()">Sim</button>
-                <button id="noButton" onmouseover="moverBotao()" onmouseleave="moverBotao()">Não</button>
+                <button id="noButton" onmouseover="moverBotao(event)" onmouseleave="moverBotao()">Não</button>
             </div>
         </div>
 
